--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -1,160 +1,107 @@
 {
-  "@@last_modified": "2020-09-14T11:24:01.131795",
-  "Login": "Login",
-  "@Login": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Create new Account": "Create new Account",
-  "@Create new Account": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "I already have an Account": "I already have an Account",
-  "@I already have an Account": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Password has to include at least 6 characters": "Password has to include at least 6 characters",
-  "@Password has to include at least 6 characters": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Create Password": "Create Password",
-  "@Create Password": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Email Address": "Email Address",
-  "@Email Address": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "This doesn’t looks like email address": "This doesn’t looks like email address",
-  "@This doesn’t looks like email address": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "yourPasswordContainChars": "Your password contain {length}/6 characters",
-  "@yourPasswordContainChars": {
-    "type": "text",
-    "placeholders": {
-      "length": {}
-    }
-  },
-  "Continue with Google": "Continue with Google",
-  "@Continue with Google": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Error": "Error",
-  "@Error": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Type song name, lyrics...": "Type song name, lyrics...",
-  "@Type song name, lyrics...": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Cancel": "Cancel",
-  "@Cancel": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "All Lyrics": "All Lyrics",
-  "@All Lyrics": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Account Settings": "Account Settings",
-  "@Account Settings": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Change email address": "Change email address",
-  "@Change email address": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Not yet implemented": "Not yet implemented",
-  "@Not yet implemented": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Change password": "Change password",
-  "@Change password": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Logout": "Logout",
-  "@Logout": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Change password, email, logout": "Change password, email, logout",
-  "@Change password, email, logout": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Notifications": "Notifications",
-  "@Notifications": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Manage notifications": "Manage notifications",
-  "@Manage notifications": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Report about bug": "Report about bug",
-  "@Report about bug": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Could not launch": "Could not launch",
-  "@Could not launch": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Chords": "Chords",
-  "@Chords": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Write us a line about problem you have": "Write us a line about problem you have",
-  "@Write us a line about problem you have": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Words to Pray God": "Words to Pray God",
-  "@Words to Pray God": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Play songs you like": "Play songs you like",
-  "@Play songs you like": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "The words of truth": "The words of truth",
-  "@The words of truth": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Find the lyrics of popular christian songs to sing with people you love": "Find the lyrics of popular christian songs to sing with people you love",
-  "@Find the lyrics of popular christian songs to sing with people you love": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Beside lyrics you also can find the chords for guitar and notes for piano!": "Beside lyrics you also can find the chords for guitar and notes for piano!",
-  "@Beside lyrics you also can find the chords for guitar and notes for piano!": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Read the great stories of great people how God changes their lives!": "Read the great stories of great people how God changes their lives!",
-  "@Read the great stories of great people how God changes their lives!": {
-    "type": "text",
-    "placeholders": {}
-  }
+    "@@locale": "en",
+    "@@last_modified": "2020-10-14T14:10:52+00:00",
+    "Home": "Home",
+    "My Lyrics": "My Lyrics",
+    "Settings": "Settings",
+    "Login": "Login",
+    "Already have an Account": "Already have an Account",
+    "Password has to include at least 6 characters": "Password has to include at least 6 characters",
+    "Create Password": "Create Password",
+    "Email Address": "Email Address",
+    "This doesn’t looks like email address": "This doesn’t looks like email address",
+    "yourPasswordContainChars": "Your password contain {length}\/6 characters",
+    "Continue with Google": "Continue with Google",
+    "Error": "Error",
+    "Type song name, lyrics...": "Type song name, lyrics...",
+    "Cancel": "Cancel",
+    "All Lyrics": "All Lyrics",
+    "Account Settings": "Account Settings",
+    "Change email address": "Change email address",
+    "Not yet implemented": "Not yet implemented",
+    "Change password": "Change password",
+    "Logout": "Logout",
+    "Change password, email, logout": "Change password, email, logout",
+    "Notifications": "Notifications",
+    "Manage notifications": "Manage notifications",
+    "Report about bug": "Report about bug",
+    "Could not launch": "Could not launch",
+    "Chords": "Chords",
+    "Write us a line about problem you have": "Write us a line about problem you have",
+    "Words to Pray God": "Words to Pray God",
+    "Play songs you like": "Play songs you like",
+    "The words of truth": "The words of truth",
+    "Find the lyrics of popular christian songs to sing with people you love": "Find the lyrics of popular Сhristian songs to sing with people you love",
+    "Beside lyrics you also can find the chords for guitar and notes for piano!": "Beside lyrics you also can find the chords for guitar and notes for piano!",
+    "Read the great stories of great people how God changes their lives!": "Read the great stories of great people how God changes their lives!",
+    "Filters": "Filters",
+    "Reset": "Reset",
+    "Song Language": "Song Language",
+    "Apply": "Apply",
+    "All": "All",
+    "English": "English",
+    "Russian": "Russian",
+    "Ukrainian": "Ukrainian",
+    "Password": "Password",
+    "Worship Songs": "Worship Songs",
+    "Version": "Version",
+    "No Lyrics Added": "No Lyrics Added",
+    "Browse our lyrics catalogue and find something for yourself": "Browse our lyrics catalogue and find something for yourself",
+    "Explore Lyrics": "Explore Lyrics",
+    "Admin Portal": "Admin Portal",
+    "Go to the admin portal": "Go to the admin portal",
+    "Requests": "Requests",
+    "Catalog": "Catalog",
+    "Lyrics": "Lyrics",
+    "Creating": "Creating",
+    "General Info": "General Info",
+    "No Album Assigned": "No Album Assigned",
+    "Assign to Album": "Assign to Album",
+    "Request Info": "Request Info",
+    "Requested by": "Requested by",
+    "Date and Time": "Date and Time",
+    "Edit": "Edit",
+    "ex. Way Maker": "ex. Way Maker",
+    "Lyrics Title": "Lyrics Title",
+    "Accept": "Accept",
+    "Reject": "Reject",
+    "Artist Title": "Artist Title",
+    "ex. Room For More": "ex. Room For More",
+    "Artist Description": "Artist Description",
+    "File should not be bigger than": "File should not be bigger than",
+    "Describe this Artist": "Describe this Artist",
+    "Select new photo from gallery": "Select new Image from gallery",
+    "Delete Photo": "Delete Image",
+    "Success": "Success",
+    "No Artist Assigned": "No Artist Assigned",
+    "Assign Artist": "Assign Artist",
+    "Type artist name...": "Type artist name...",
+    "How to Add Chords": "How to Add Chords",
+    "To add chords to the lyrics insert “.”(Dot Sign) at start of Chords String": "To add chords to the lyrics insert “.”(Dot Sign) at the start of Chords String",
+    "Lyrics and Chords": "Lyrics and Chords",
+    "Loading...": "Loading...",
+    "No new requests": "No new requests",
+    "Preview": "Preview",
+    "Content successfully deleted": "Content successfully deleted",
+    "Content delete error": "Content delete error",
+    "ex. Alive": "ex. Alive",
+    "Start": "Start",
+    "Easier way to login": "Easier way to login",
+    "We respect your time!": "We respect your time!",
+    "Using Social Media Login you will save tremendous amount of time ": "Using Social Media Login you will save tremendous amount of time",
+    "It’s really save!": "It’s really safe!",
+    "No more passwords to forgot": "No more passwords to forget",
+    "Or": "Or",
+    "Sign up with E-Mail": "Sign up with E-Mail",
+    "Sign Up": "Sign Up",
+    "Language": "Language",
+    "Save": "Save",
+    "Delete Artist": "Delete Artist",
+    "Delete Lyrics": "Delete Lyrics",
+    "Delete Album": "Delete Album",
+    "Are you sure you want to delete this artist? If deleted, artist will no longer be available to all users.": "Are you sure you want to delete this artist? If deleted, artist will no longer be available to all users.",
+    "Are you sure you want to delete this lyrics? If deleted, lyrics will no longer be available to all users.": "Are you sure you want to delete these lyrics? If deleted, lyrics will no longer be available to all users.",
+    "Are you sure you want to delete this lyrics? If deleted, album will no longer be available to all users.": "Are you sure you want to delete this lyrics? If deleted, album will no longer be available to all users.",
+    "albums": "{count, plural, one {Album} other {Albums}}",
+    "artists": "{count, plural, one {Artist} other {Artists}}"
 }
