--- a/lib/l10n/arb/intl_ru.arb
+++ b/lib/l10n/arb/intl_ru.arb
@@ -1,245 +1,107 @@
 {
-  "@@last_modified": "2020-09-14T11:24:01.131795",
-  "Home": "Главная",
-  "@Home": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "My Lyrics": "Избранное",
-  "@My Lyrics": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Settings": "Настройки",
-  "@Settings": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Login": "Вход",
-  "@Login": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Create new Account": "Создать аккаунт",
-  "@Create new Account": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "I already have an Account": "У меня уже есть аккаунт",
-  "@I already have an Account": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Password has to include at least 6 characters": "Пароль должен содержать ка миннимум 6 символов",
-  "@Password has to include at least 6 characters": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Create Password": "Создать пароль",
-  "@Create Password": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Email Address": "Email адресс",
-  "@Email Address": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "This doesn’t looks like email address": "Это не похоже на email адресс",
-  "@This doesn’t looks like email address": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "yourPasswordContainChars": "Ваш пароль сожержит {length}/6 символов",
-  "@yourPasswordContainChars": {
-    "type": "text",
-    "placeholders": {
-      "length": {}
-    }
-  },
-  "Continue with Google": "Продолжить с Google",
-  "@Continue with Google": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Error": "Ошибка",
-  "@Error": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Type song name, lyrics...": "Введите название песни...",
-  "@Type song name, lyrics...": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Cancel": "Отмена",
-  "@Cancel": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "All Lyrics": "Все песни",
-  "@All Lyrics": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Account Settings": "Настройки профиля",
-  "@Account Settings": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Change email address": "Изменить email адресс",
-  "@Change email address": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Not yet implemented": "Ещё не реализовано",
-  "@Not yet implemented": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Change password": "Изменить пароль",
-  "@Change password": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Logout": "Выйти",
-  "@Logout": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Change password, email, logout": "Изменить пароль, email, выйти",
-  "@Change password, email, logout": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Notifications": "Уведомления",
-  "@Notifications": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Manage notifications": "Управление уведомлениями",
-  "@Manage notifications": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Report about bug": "Донести об ошибке",
-  "@Report about bug": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Could not launch": "Не получилось запустить",
-  "@Could not launch": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Chords": "Аккорды",
-  "@Chords": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Write us a line about problem you have": "Напишите немного про ошибку, которую вы получили",
-  "@Write us a line about problem you have": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Words to Pray God": "Слова молитвы Богу",
-  "@Words to Pray God": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Play songs you like": "Играйте ваши любимые песни",
-  "@Play songs you like": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "The words of truth": "Слова истины",
-  "@The words of truth": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Find the lyrics of popular christian songs to sing with people you love": "Находите текст популярных христианских песен, чтобы петь с вашими любимыми",
-  "@Find the lyrics of popular christian songs to sing with people you love": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Beside lyrics you also can find the chords for guitar and notes for piano!": "Кроме текста, вы таже можете найти аккорды и ноты для фортепиано!",
-  "@Beside lyrics you also can find the chords for guitar and notes for piano!": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Read the great stories of great people how God changes their lives!": "Читайте классные истории про людей, жизнь которых меняет Бог!",
-  "@Read the great stories of great people how God changes their lives!": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Filters": "Фильтры",
-  "@Filters": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Reset": "Сбросить",
-  "@Reset": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Song Language": "Язык песни",
-  "@Song Language": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Apply": "Применить",
-  "@Apply": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "All": "Любой",
-  "@All": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "English": "Английский",
-  "@English": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Russian": "Русский",
-  "@Russian": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Ukrainian": "Украинский",
-  "@Ukrainian": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Password": "Пароль",
-  "@Password": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Worship Songs": "Worship Songs",
-  "@Worship Songs": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Version": "Версия",
-  "@Version": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "No Lyrics Added": "Нет добавленных песен",
-  "@No Lyrics Added": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Browse our lyrics catalogue and find something for yourself": "Просмотрите наш каталог текстов песен и найдите что-нибудь для себя",
-  "@Browse our lyrics catalogue and find something for yourself": {
-    "type": "text",
-    "placeholders": {}
-  },
-  "Explore Lyrics": "Перейти к песням",
-  "@Explore Lyrics": {
-    "type": "text",
-    "placeholders": {}
-  }
+    "@@locale": "ru",
+    "@@last_modified": "2020-10-14T14:06:38+00:00",
+    "Home": "Главная",
+    "My Lyrics": "Избранное",
+    "Settings": "Настройки",
+    "Login": "Вход",
+    "Already have an Account": "Уже есть аккаунт",
+    "Password has to include at least 6 characters": "Пароль должен содержать как минимум 6 символов",
+    "Create Password": "Создать пароль",
+    "Email Address": "Email адресс",
+    "This doesn’t looks like email address": "Это не похоже на email адресс",
+    "yourPasswordContainChars": "Ваш пароль содержит {length}\/6 символов",
+    "Continue with Google": "Продолжить с Google",
+    "Error": "Ошибка",
+    "Type song name, lyrics...": "Введите название песни...",
+    "Cancel": "Отмена",
+    "All Lyrics": "Все песни",
+    "Account Settings": "Настройки профиля",
+    "Change email address": "Изменить email адресс",
+    "Not yet implemented": "Ещё не реализовано",
+    "Change password": "Изменить пароль",
+    "Logout": "Выйти",
+    "Change password, email, logout": "Изменить пароль, email, выйти",
+    "Notifications": "Уведомления",
+    "Manage notifications": "Управление уведомлениями",
+    "Report about bug": "Донести об ошибке",
+    "Could not launch": "Не получилось запустить",
+    "Chords": "Аккорды",
+    "Write us a line about problem you have": "Напишите немного про ошибку, которую вы получили",
+    "Words to Pray God": "Слова молитвы Богу",
+    "Play songs you like": "Играйте ваши любимые песни",
+    "The words of truth": "Слова истины",
+    "Find the lyrics of popular christian songs to sing with people you love": "Находите текст популярных христианских песен, чтобы петь с вашими любимыми",
+    "Beside lyrics you also can find the chords for guitar and notes for piano!": "Кроме текста, вы таже можете найти аккорды и ноты для фортепиано!",
+    "Read the great stories of great people how God changes their lives!": "Читайте классные истории про людей, жизнь которых меняет Бог!",
+    "Filters": "Фильтры",
+    "Reset": "Сбросить",
+    "Song Language": "Язык песни",
+    "Apply": "Применить",
+    "All": "Все",
+    "English": "Английский",
+    "Russian": "Русский",
+    "Ukrainian": "Украинский",
+    "Password": "Пароль",
+    "Worship Songs": "Worship Songs",
+    "Version": "Версия",
+    "No Lyrics Added": "Нет добавленных песен",
+    "Browse our lyrics catalogue and find something for yourself": "Просмотрите наш каталог текстов песен и найдите что-нибудь для себя",
+    "Explore Lyrics": "Перейти к песням",
+    "Admin Portal": "Портал администратора",
+    "Go to the admin portal": "Перейти на портал администратора",
+    "Requests": "Запросы",
+    "Catalog": "Каталог",
+    "Lyrics": "Текст песни",
+    "Creating": "Создание",
+    "General Info": "Главная информация",
+    "No Album Assigned": "Нет прикреплённого альбома",
+    "Assign to Album": "Прикрепить к альбому",
+    "Request Info": "Информация о запросе",
+    "Requested by": "Создано",
+    "Date and Time": "Дата и время",
+    "Edit": "Редактировать",
+    "ex. Way Maker": "напр. Девяносто девять",
+    "Lyrics Title": "Название песни",
+    "Accept": "Принять",
+    "Reject": "Отклонить",
+    "Artist Title": "Название исполнителя",
+    "ex. Room For More": "напр. Room For More",
+    "Artist Description": "Описание исполнителя",
+    "File should not be bigger than": "Файл не должен превышать",
+    "Describe this Artist": "Описать исполнителя",
+    "Select new photo from gallery": "Выбрать новое изображение из галереи",
+    "Delete Photo": "Удалить изображение",
+    "Success": "Успешно",
+    "No Artist Assigned": "Нет прикреплённого исполнителя",
+    "Assign Artist": "Прикрепить исполнителя",
+    "Type artist name...": "Введите название исполнителя",
+    "How to Add Chords": "Как добавить аккорды",
+    "To add chords to the lyrics insert “.”(Dot Sign) at start of Chords String": "Чтобы добавить аккорды к тексту, вставьте «.» (Знак точки) в начале строки аккордов.",
+    "Lyrics and Chords": "Текст и аккорды",
+    "Loading...": "Загрузка...",
+    "No new requests": "Нет новых запросов",
+    "Preview": "Предварительный просмотр",
+    "Content successfully deleted": "Контент успешно удален",
+    "Content delete error": "Ошибка удаления контента",
+    "ex. Alive": "прим. Alive",
+    "Start": "Начать",
+    "Easier way to login": "Более простой способ войти",
+    "We respect your time!": "Мы уважаем ваше время!",
+    "Using Social Media Login you will save tremendous amount of time ": "Используя вход через социальные сети, вы сэкономите огромное количество времени",
+    "It’s really save!": "Это действительно безопасно!",
+    "No more passwords to forgot": "Можно не бояться забыть пароль",
+    "Or": "Или",
+    "Sign up with E-Mail": "Зарегистрируйтесь с помощью E-Mail",
+    "Sign Up": "Зарегистрироваться",
+    "Language": "Язык",
+    "Save": "Сохранить",
+    "Delete Artist": "Удалить артиста",
+    "Delete Lyrics": "Удалить песню",
+    "Delete Album": "Удалить альбом",
+    "Are you sure you want to delete this artist? If deleted, artist will no longer be available to all users.": "Вы уверены, что хотите удалить этого исполнителя? В случае удаления исполнитель больше не будет доступен для всех пользователей.",
+    "Are you sure you want to delete this lyrics? If deleted, lyrics will no longer be available to all users.": "Вы уверены, что хотите удалить этот текст песни? В случае удаления, текст песни станет недоступен для всех пользователей.",
+    "Are you sure you want to delete this lyrics? If deleted, album will no longer be available to all users.": "Вы уверены, что хотите удалить этот альбом? В случае удаления альбом станет недоступен для всех пользователей.",
+    "albums": "{count, plural, one {Альбом} few {Альбомов} many {Альбомов} other {Альбомы}}",
+    "artists": "{count, plural, few {Исполнителей} many {Исполнителей} other {Исполнители} one {Исполнитель}}"
 }
